--- a/deno.json
+++ b/deno.json
@@ -25,7 +25,8 @@
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.2",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
-    "$std/": "https://deno.land/std@0.193.0/"
+    "$std/": "https://deno.land/std@0.193.0/",
+    "hs-client": "https://esm.sh/hs-client@6.0.0"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
